exports[`test Index route 1`] = `
<div
  className="app-container">
  <header>
    <a
      href="#/"
      onClick={[Function]}
      style={Object {}}>
      Home
    </a>
    <span
      style={
        Object {
          "margin": "0 5px",
        }
      }>
      |
    </span>
    <a
      href="#/users"
      onClick={[Function]}
      style={Object {}}>
      Users
    </a>
  </header>
  <div
    className="app-content">
    <div>
      <h1>
        Index Page
      </h1>
    </div>
  </div>
  <footer
    style={
      Object {
        "borderTop": "1px solid #000",
        "marginTop": "15px",
      }
    }>
    <p>
      This is where the footer goes.
    </p>
  </footer>
</div>
`;

exports[`test NotFound route 1`] = `
<div
  className="app-container">
  <header>
    <a
      href="#/"
      onClick={[Function]}
      style={Object {}}>
      Home
    </a>
    <span
      style={
        Object {
          "margin": "0 5px",
        }
      }>
      |
    </span>
    <a
      href="#/users"
      onClick={[Function]}
      style={Object {}}>
      Users
    </a>
  </header>
  <div
    className="app-content">
    <div
      className="not-found">
      <h1>
        404
      </h1>
      <h2>
        Page not found!
      </h2>
      <p>
        <a
          href="#/"
          onClick={[Function]}
          style={Object {}}>
          Go back to the main page
        </a>
      </p>
    </div>
  </div>
  <footer
    style={
      Object {
        "borderTop": "1px solid #000",
        "marginTop": "15px",
      }
    }>
    <p>
      This is where the footer goes.
    </p>
  </footer>
</div>
`;

exports[`test Users route 1`] = `
<div
  className="app-container">
  <header>
    <a
      href="#/"
      onClick={[Function]}
      style={Object {}}>
      Home
    </a>
    <span
      style={
        Object {
          "margin": "0 5px",
        }
      }>
      |
    </span>
    <a
      href="#/users"
      onClick={[Function]}
      style={Object {}}>
      Users
    </a>
  </header>
  <div
    className="app-content">
    <div>
      <h1>
        Users Page
      </h1>
      <div>
        State inside the Users Container: 
        5
      </div>
      <hr />
      <div>
        Counter Component:
      </div>
      <div>
        5
        <button
          onClick={[Function]}>
          +
        </button>
      </div>
    </div>
  </div>
  <footer
    style={
      Object {
        "borderTop": "1px solid #000",
        "marginTop": "15px",
      }
    }>
    <p>
      This is where the footer goes.
    </p>
  </footer>
</div>
`;
